Implement user authentication and profile display
This commit implements user authentication and profile display functionality for a web application using Angular on the client side and Spring Boot on the server side.

Changes Made:
- Client-side Angular code includes components for user login, logout, and profile display.
- Server-side Spring Boot code includes REST endpoints for user authentication and fetching user information.
- JWT (JSON Web Token) authentication is used for secure communication between the client and server.
- Client-side HTTP requests are made to the server to authenticate users and fetch user data.
- Decoding JWT tokens on the server side to extract user information.
- Displaying user profile information, including first name and last name initials, on the client-side navigation bar.

Additional Notes:
- Error handling and logging are implemented to handle various scenarios, such as invalid tokens and authentication failures.
- Security measures, such as password hashing and role-based access control, are applied on the server side.
- Client-side components are styled for a user-friendly interface.

This implementation aims to provide a seamless user authentication experience and display relevant user information on the application frontend.